# data_analysis_case_study_1

./: README.md  main.py  pyproject.toml
__MACOSX/data/: ._retail_sales.duckdb
__MACOSX/dbt/models/: ._meta_data.sql
analysis/: eda.py
data_analysis/: analysis_and_visualizations.py  data_for_forecast.csv  eda_script.py  eda_summary.txt  findings_and_hypotheses.txt
dbt/: dbt_project.yml  profiles.yml
dbt/models/: data_for_forecasting.sql  meta_data.sql  per_item_covariates.sql  target_time_series.sql
dbt/models/staging/: schema.yml  stg_hierarchy.sql  stg_sales.sql  stg_stores.sql
dbt/tests/: row_count_check.sql
predictions/: forecast_sales.py
predictions/forecast_results/: sales_forecast.csv
