[tool.poetry]
name = "analysis-challenge"
version = "0.1.0"
description = ""
authors = ["Paretos <engineering@paretos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.9.1"
duckdb = "^1.1.3"
pandas = "^2.2.3"
dbt-duckdb = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
